updates to a majority of feedback, also fixes issue where content boxes were covering the scroll-down button in sections 1 and 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -607,7 +607,7 @@
 		}
 
 		.box.style2 {
-			padding: 3.5em 2.5em 3.5em 2.5em;
+			padding: 2em 2em 2em 2em;
 		}
 
 		@media screen and (max-width: 736px) {
@@ -1825,7 +1825,7 @@
 			-webkit-justify-content: center;
 			-ms-justify-content: center;
 			justify-content: center;
-			padding: 3em 0 3em 0;
+			padding: 6em 0 6em 0;
 			overflow: hidden;
 		}
 
@@ -2093,29 +2093,29 @@
 /* Intro */
 
 	#intro {
-		background: url("images/overlay.png"), url("../../images/hq2.png");
-		background-size: 256px 256px, cover;
-		background-attachment: fixed, fixed;
-		background-position: top left, bottom center;
-		background-repeat: repeat, no-repeat;
+		background:url("../../images/hq2.png");
+		background-size:cover;
+		background-attachment:fixed;
+		background-position:bottom center;
+		background-repeat:no-repeat;
 	}
 
 /* One */
 
 	#one {
-		background: url("images/overlay.png"), url("../../images/br1.png");
-		background-size: 256px 256px, cover;
-		background-attachment: fixed, fixed;
-		background-position: top left, center center;
+		background:url("../../images/br1.png");
+		background-size:cover;
+		background-attachment:fixed;
+		background-position:center center;
 	}
 
 /* Two */
 
 	#two {
-		background: url("images/overlay.png"), url("../../images/two.jpg");
-		background-size: 256px 256px, cover;
-		background-attachment: fixed, fixed;
-		background-position: top left, center center;
+		background:url("../../images/ss1.png");
+		background-size:cover;
+		background-attachment:fixed;
+		background-position:center center;
 	}
 
 /* Contact */
